Add mother cell tracking

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
@@ -14,7 +14,10 @@
     "import skimage as sk\n",
     "import os\n",
     "import h5py\n",
-    "import resource"
+    "import resource\n",
+    "\n",
+    "%load_ext line_profiler\n",
+    "import random"
    ]
   },
   {
@@ -32,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_37_mux_salt_concentration\""
+    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\""
    ]
   },
   {
@@ -41,8 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmenter = phase_segmentation_cluster(headpath, seg_channel=\"Phase\")\n",
-    "segmenter.bit_max = None"
+    "segmenter = phase_segmentation_cluster(headpath,\n",
+    "            seg_channel=\"Phase\",init_niblack_k=-0.45,\n",
+    "            maxima_niblack_k=-0.8, init_smooth_sigma=4,\n",
+    "            maxima_smooth_sigma=3, init_niblack_window_size=13,\n",
+    "            maxima_niblack_window_size=13, min_cell_size=100,\n",
+    "            deviation_from_median=0.3, max_perc_contrast=97,\n",
+    "            wrap_pad=0"
    ]
   },
   {
@@ -51,7 +59,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = segmenter.load_trench_array_list(np.random.randint(145))"
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "metadata = kymodf.metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        kymodf = kymodf.reset_index()\n",
+    "        kymodf = kymodf.set_index([\"File Index\", \"File Trench Index\", \"timepoints\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymodf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
+    "random.shuffle(file_indices)\n",
+    "file_idx = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = segmenter.load_trench_array_list(\n",
+    "    segmenter.kymographpath + \"/kymograph_\", file_idx, segmenter.seg_channel, True\n",
+    ")"
    ]
   },
   {
@@ -111,7 +162,7 @@
    "outputs": [],
    "source": [
     "dc = dask_controller(\n",
-    "    walltime=\"12:00:00\",\n",
+    "    walltime=\"6:00:00\",\n",
     "    local=False,\n",
     "    n_workers=50,\n",
     "    memory=\"7.5GB\",\n",
@@ -146,6 +197,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dc.futures[\"Segmentation: 0\"].result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dc.shutdown()"
    ]
   },
@@ -162,7 +222,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_idx = np.random.randint(200)\n",
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
+    "random.shuffle(file_indices)\n",
+    "file_idx = file_indices[0]\n",
     "with h5py.File(\n",
     "    segmenter.phasesegmentationpath + \"/segmentation_\" + str(file_idx) + \".hdf5\", \"r\"\n",
     ") as input_file:\n",
@@ -252,6 +315,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.hist(trench_loadings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dc.shutdown()"
    ]
   },
@@ -309,16 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = kymodf.loc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(kymodf.index.unique(\"File Trench Index\"))"
+    "file_idx = np.random.randint(500)"
    ]
   },
   {
@@ -347,21 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"area\",\n",
-    "    \"bbox\",\n",
-    "    \"centroid\",\n",
-    "    \"convex_area\",\n",
-    "    \"eccentricity\",\n",
-    "    \"equivalent_diameter\",\n",
-    "    \"extent\",\n",
-    "    \"label\",\n",
-    "    \"major_axis_length\",\n",
-    "    \"minor_axis_length\",\n",
-    "    \"orientation\",\n",
-    "    \"perimeter\",\n",
-    "    \"solidity\",\n",
-    "]"
+    "columns = [\"area\", \"centroid\", \"label\", \"major_axis_length\", \"minor_axis_length\"]"
    ]
   },
   {
@@ -370,9 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmenter.extract_cell_data(\n",
-    "    file_idx, data, times, global_trench_indices, trench_loadings, columns, metadata\n",
-    ")"
+    "%lprun -f segmenter.extract_cell_data segmenter.extract_cell_data(file_idx, times, global_trench_indices, trench_loadings, columns, metadata)"
    ]
   },
   {
@@ -405,15 +452,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testdf.tail(10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -426,11 +464,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "headpath = \"/n/scratch2/bj66/vibrio_30_MUX\"\n",
+    "segmenter = phase_segmentation_cluster(\n",
+    "    headpath,\n",
+    "    seg_channel=\"Phase\",\n",
+    "    init_niblack_k=-0.45,\n",
+    "    maxima_niblack_k=-0.8,\n",
+    "    init_smooth_sigma=4,\n",
+    "    maxima_smooth_sigma=3,\n",
+    "    init_niblack_window_size=13,\n",
+    "    maxima_niblack_window_size=13,\n",
+    "    min_cell_size=100,\n",
+    "    deviation_from_median=0.3,\n",
+    "    max_perc_contrast=97,\n",
+    "    wrap_pad=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dc = dask_controller(\n",
-    "    walltime=\"10:00:00\",\n",
+    "    walltime=\"4:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=100,\n",
-    "    memory=\"6GB\",\n",
+    "    n_workers=50,\n",
+    "    memory=\"2GB\",\n",
     "    death_timeout=120.0,\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -453,21 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"area\",\n",
-    "    \"bbox\",\n",
-    "    \"centroid\",\n",
-    "    \"convex_area\",\n",
-    "    \"eccentricity\",\n",
-    "    \"equivalent_diameter\",\n",
-    "    \"extent\",\n",
-    "    \"label\",\n",
-    "    \"major_axis_length\",\n",
-    "    \"minor_axis_length\",\n",
-    "    \"orientation\",\n",
-    "    \"perimeter\",\n",
-    "    \"solidity\",\n",
-    "]\n",
+    "columns = [\"area\", \"centroid\", \"label\", \"major_axis_length\", \"minor_axis_length\"]\n",
     "segmenter.dask_extract_cell_data(dc, columns)"
    ]
   },
@@ -478,32 +525,6 @@
    "outputs": [],
    "source": [
     "dc.shutdown()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lost_count = 0\n",
-    "for key, value in dc.futures.items():\n",
-    "    if value.status == \"lost\":\n",
-    "        print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
-    "metadata = kymodf.metadata\n",
-    "#         width = metadata['kymograph_params']['trench_width_x']\n",
-    "#         height = metadata['kymograph_params']['ttl_len_y']\n",
-    "file_list = kymodf[\"File Index\"].unique().tolist()\n",
-    "num_file_jobs = len(file_list)"
    ]
   },
   {
@@ -531,12 +552,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\"\n",
+    "segmenter = phase_segmentation_cluster(\n",
+    "    headpath,\n",
+    "    seg_channel=\"Phase\",\n",
+    "    init_niblack_k=-0.45,\n",
+    "    maxima_niblack_k=-0.8,\n",
+    "    init_smooth_sigma=4,\n",
+    "    maxima_smooth_sigma=3,\n",
+    "    init_niblack_window_size=13,\n",
+    "    maxima_niblack_window_size=13,\n",
+    "    min_cell_size=100,\n",
+    "    deviation_from_median=0.3,\n",
+    "    max_perc_contrast=97,\n",
+    "    wrap_pad=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pandas import HDFStore\n",
     "import pandas as pd\n",
     "import random\n",
     "\n",
-    "file_idx = 9\n",
-    "p = os.path.join(segmenter.phasesegmentationpath, \"data_%d.h5\" % file_idx)\n",
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
+    "random.shuffle(file_indices)\n",
+    "file_idx = file_indices[0]\n",
+    "p = os.path.join(segmenter.phasedatapath, \"data_%d.h5\" % file_idx)\n",
     "test_df = pd.read_hdf(p)"
    ]
   },
@@ -546,16 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(test_df.index.unique(\"time_s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.head(3)"
+    "len(test_df.index.unique(\"time_s\"))"
    ]
   },
   {
@@ -580,11 +618,7 @@
     "with h5py.File(\n",
     "    segmenter.phasesegmentationpath + \"/segmentation_\" + str(file_idx) + \".hdf5\", \"r\"\n",
     ") as input_file:\n",
-    "    data = input_file[\"data\"][:]\n",
-    "    img = data[trench_idx, time_idx, :, :]\n",
-    "    fig1, ax1 = plt.subplots(figsize=(10, 10))\n",
-    "    ax1.imshow(img)\n",
-    "    print(\"File %d, Trench %d, Time %d\" % (file_idx, trench_idx, time_idx))"
+    "    data = input_file[\"data\"][:]"
    ]
   },
   {
@@ -602,7 +636,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(times)"
+    "test_df_refactored = test_df.reset_index().set_index(\n",
+    "    [\"file_trench_index\", \"trench_cell_index\"]\n",
+    ")"
    ]
   },
   {
@@ -615,8 +651,8 @@
     "for i, ax in enumerate(axes):\n",
     "    ax.imshow(data[trench_idx, time_idx + i, :, :], cmap=\"inferno_r\")\n",
     "    ax.scatter(\n",
-    "        test_df.loc[trench_idx, times[time_idx + i]][\"centy\"],\n",
     "        test_df.loc[trench_idx, times[time_idx + i]][\"centx\"],\n",
+    "        test_df.loc[trench_idx, times[time_idx + i]][\"centy\"],\n",
     "    )"
    ]
   },
@@ -624,14 +660,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get division times"
+    "# Try lineage single-cell growth rates"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get lineage single-cell growth rates"
+    "# Get all growth properties"
    ]
   },
   {
@@ -640,7 +676,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trenchripper.DetectPeaks import detect_peaks"
+    "from trenchripper.tracking import mother_tracker\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from pandas import HDFStore"
    ]
   },
   {
@@ -649,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.signal as signal"
+    "headpath = \"/n/scratch2/bj66/vibrio_30_MUX\""
    ]
   },
   {
@@ -658,7 +697,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mother_cell = test_df.loc[trench_idx, :, 1]"
+    "tracker = mother_tracker(headpath)"
    ]
   },
   {
@@ -667,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "major_axis_length = np.array(mother_cell[\"major_axis_length\"])"
+    "tracker.save_all_growth_props()"
    ]
   },
   {
@@ -676,7 +715,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(major_axis_length)"
+    "growth_rates = pd.read_hdf(\n",
+    "    os.path.join(tracker.phasesegmentationpath, \"growth_properties.h5\"), \"growth_rates\"\n",
+    ")"
    ]
   },
   {
@@ -685,8 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mal_smoothed = signal.wiener(major_axis_length)\n",
-    "plt.plot(mal_smoothed)"
+    "growth_rates.head()"
    ]
   },
   {
@@ -695,8 +735,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mal_smoothed = signal.savgol_filter(major_axis_length, 5, 2)\n",
-    "plt.plot(mal_smoothed)"
+    "growth_rates.index.unique(\"trenchid\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inspect trenches"
    ]
   },
   {
@@ -705,7 +751,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detect_peaks(major_axis_length, mpd=3, show=True)"
+    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\"\n",
+    "segmenter = phase_segmentation_cluster(\n",
+    "    headpath,\n",
+    "    seg_channel=\"Phase\",\n",
+    "    init_niblack_k=-0.45,\n",
+    "    maxima_niblack_k=-0.8,\n",
+    "    init_smooth_sigma=4,\n",
+    "    maxima_smooth_sigma=3,\n",
+    "    init_niblack_window_size=13,\n",
+    "    maxima_niblack_window_size=13,\n",
+    "    min_cell_size=100,\n",
+    "    deviation_from_median=0.3,\n",
+    "    max_perc_contrast=97,\n",
+    "    wrap_pad=0,\n",
+    ")"
    ]
   },
   {
@@ -714,7 +774,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detect_peaks(mal_smoothed, mpd=3, show=True)"
+    "from pandas import HDFStore\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "\n",
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
+    "random.shuffle(file_indices)"
    ]
   },
   {
@@ -723,7 +789,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detect_peaks(mal_smoothed, mpd=3, show=True)"
+    "file_idx = 229\n",
+    "trenchid = 1148\n",
+    "p = os.path.join(segmenter.phasedatapath, \"data_%d.h5\" % file_idx)\n",
+    "test_df = pd.read_hdf(p)\n",
+    "test_df = test_df[test_df[\"trenchid\"] == trenchid]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_idx = test_df.index.unique(\"file_trench_index\")[0]\n",
+    "times = test_df.loc[trench_idx].index.unique(\"time_s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show segmentation mask\n",
+    "with h5py.File(\n",
+    "    segmenter.phasesegmentationpath + \"/segmentation_\" + str(file_idx) + \".hdf5\", \"r\"\n",
+    ") as input_file:\n",
+    "    data = input_file[\"data\"][trench_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_idx = 1050\n",
+    "n_rows = 8\n",
+    "fig1, axes = plt.subplots(1 * n_rows, 15, figsize=(20, 10 * n_rows))\n",
+    "for i, ax in enumerate(axes.ravel()):\n",
+    "    ax.imshow(data[time_idx + i, :, :], cmap=\"inferno_r\")\n",
+    "    ax.scatter(\n",
+    "        test_df.loc[trench_idx, times[time_idx + i]][\"centx\"],\n",
+    "        test_df.loc[trench_idx, times[time_idx + i]][\"centy\"],\n",
+    "    )"
    ]
   },
   {
