--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -24,7 +24,6 @@
    "source": [
     "import trenchripper as tr\n",
     "\n",
-    "\n",
     "from ipywidgets import (\n",
     "    interact,\n",
     "    interactive,\n",
@@ -36,6 +35,7 @@
     "    IntText,\n",
     "    SelectMultiple,\n",
     "    IntRangeSlider,\n",
+    "    FloatRangeSlider,\n",
     ")\n",
     "import ipywidgets as widgets\n",
     "import matplotlib\n",
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-06-18_DE85_training_data\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-06-18_DE85_training_data/bde17_gotime.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-10-24_emanuele\"\n",
+    "nd2file = \"/n/scratch2/de64/2019-10-24_emanuele/GLU_to_ACET_SWITCH---MERGE_NEW.nd2\""
    ]
   },
   {
@@ -80,9 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-06-18_DE85_training_data\"\n",
-    "targetdir = \"/n/scratch2/de64/2019-06-18_DE85_training_data\"\n",
-    "tr.cluster.transferjob(sourcedir, targetdir)"
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Leoncini/DATA_Ti3/20180719--Glu_Acetate--Yvonne/GLU_to_ACET_SWITCH---MERGE_NEW.nd2\"\n",
+    "targetdir = \"/n/scratch2/de64/2019-10-24_emanuele\"\n",
+    "transferjob(sourcedir, targetdir)"
    ]
   },
   {
@@ -108,7 +108,11 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"2GB\"\n",
+    "    walltime=\"04:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=40,\n",
+    "    memory=\"2GB\",\n",
+    "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -136,7 +140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(nd2file, headpath, tpts_per_file=25)"
+    "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
+    "    nd2file, headpath, tpts_per_file=50, ignore_fovmetadata=True\n",
+    ")"
    ]
   },
   {
@@ -247,6 +253,7 @@
     "    channel=Dropdown(\n",
     "        options=channels, value=channels[0], description=\"Channel:\", disabled=False\n",
     "    ),\n",
+    "    invert=Dropdown(options=[True, False], value=False),\n",
     ")"
    ]
   },
@@ -261,6 +268,7 @@
     "    {\"manual\": True},\n",
     "    all_channels=fixed(channels),\n",
     "    seg_channel=Dropdown(options=channels, value=channels[0]),\n",
+    "    invert=Dropdown(options=[True, False], value=False),\n",
     "    fov_list=SelectMultiple(options=fov_list),\n",
     "    t_range=IntRangeSlider(\n",
     "        value=[0, timepoints_len - 1],\n",
@@ -326,11 +334,11 @@
     "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=200, step=2),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=300, step=10),\n",
     "    triangle_scaling=FloatSlider(value=3.5, min=0.0, max=4.0, step=0.05),\n",
-    "    triangle_threshold_bounds=IntRangeSlider(\n",
-    "        value=[0, 5000],\n",
+    "    triangle_threshold_bounds=FloatRangeSlider(\n",
+    "        value=[0, 1.0],\n",
     "        min=0,\n",
-    "        max=5000,\n",
-    "        step=50,\n",
+    "        max=1.0,\n",
+    "        step=0.01,\n",
     "        disabled=False,\n",
     "        continuous_update=False,\n",
     "    ),\n",
@@ -640,7 +648,7 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=20, memory=\"4GB\"\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=100, memory=\"8GB\"\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -662,7 +670,7 @@
    "outputs": [],
    "source": [
     "kymoclust = tr.kymograph.kymograph_cluster(\n",
-    "    headpath=headpath, trenches_per_file=20, paramfile=True\n",
+    "    headpath=headpath, trenches_per_file=50, paramfile=True\n",
     ")"
    ]
   },
@@ -672,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymoclust.generate_kymographs(dask_controller)"
+    "kymoclust.generate_kymographs(dask_controller, debug_mode=True)"
    ]
   },
   {
@@ -865,43 +873,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaled_list_int = interactive(\n",
-    "    interactive_segmentation.plot_scaled,\n",
-    "    {\"manual\": True},\n",
-    "    kymo_arr=fixed(kymo_arr),\n",
-    "    scale=Dropdown(\n",
-    "        options=[True, False],\n",
-    "        value=True,\n",
-    "        description=\"Scale Fluorescence?\",\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    scaling_percentile=IntSlider(\n",
-    "        value=90,\n",
-    "        description=\"Scaling Percentile:\",\n",
-    "        min=0,\n",
-    "        max=100,\n",
-    "        step=1,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "display(scaled_list_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaled_list = copy.copy(scaled_list_int.result)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -923,7 +894,7 @@
     "proc_list_int = interactive(\n",
     "    interactive_segmentation.plot_processed,\n",
     "    {\"manual\": True},\n",
-    "    scaled_list=fixed(scaled_list),\n",
+    "    kymo_arr=fixed(kymo_arr),\n",
     "    smooth_sigma=FloatSlider(\n",
     "        value=0.75,\n",
     "        description=\"Gaussian Kernel Sigma:\",\n",
@@ -932,7 +903,30 @@
     "        step=0.25,\n",
     "        disabled=False,\n",
     "    ),\n",
+    "    bit_max=IntSlider(\n",
+    "        value=1000,\n",
+    "        description=\"8-bit Maximum:\",\n",
+    "        min=0,\n",
+    "        max=65535,\n",
+    "        step=250,\n",
+    "        disabled=False,\n",
+    "    ),\n",
+    "    scale=Dropdown(\n",
+    "        options=[True, False],\n",
+    "        value=True,\n",
+    "        description=\"Scale Fluorescence?\",\n",
+    "        disabled=False,\n",
+    "    ),\n",
+    "    scaling_percentile=IntSlider(\n",
+    "        value=90,\n",
+    "        description=\"Scaling Percentile:\",\n",
+    "        min=0,\n",
+    "        max=100,\n",
+    "        step=1,\n",
+    "        disabled=False,\n",
+    "    ),\n",
     ")\n",
+    "\n",
     "display(proc_list_int)"
    ]
   },
@@ -944,17 +938,6 @@
    "source": [
     "proc_list = copy.copy(proc_list_int.result)\n",
     "eigval_list = interactive_segmentation.plot_eigval(proc_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "plt.imshow(eigval_list[3] > 125)"
    ]
   },
   {
@@ -990,12 +973,12 @@
     "        description=\"Cell Mask Thresholding Method:\",\n",
     "        disabled=False,\n",
     "    ),\n",
-    "    global_otsu_scaling=FloatSlider(\n",
-    "        value=0.95,\n",
-    "        description=\"Global Threshold Scaling:\",\n",
-    "        min=0.0,\n",
-    "        max=2.0,\n",
-    "        step=0.01,\n",
+    "    global_threshold=IntSlider(\n",
+    "        value=50,\n",
+    "        description=\"Global Threshold:\",\n",
+    "        min=0,\n",
+    "        max=255,\n",
+    "        step=1,\n",
     "        disabled=False,\n",
     "    ),\n",
     "    cell_otsu_scaling=FloatSlider(\n",
@@ -1220,7 +1203,11 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"01:00:00\", local=False, n_workers=100, memory=\"500MB\"\n",
+    "    walltime=\"01:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=200,\n",
+    "    memory=\"1GB\",\n",
+    "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -1255,6 +1242,103 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stop Dask Workers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Region Properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyzer = tr.analysis.regionprops_extractor(\n",
+    "    headpath, \"fluorsegmentation\", intensity_channel_list=[\"MCHERRY\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyzer.export_all_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfout = pd.read_pickle(headpath + \"/analysis.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect Kymographs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "\n",
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"MCHERRY\", \"fluorsegmentation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kyview.inspect_trench(21, 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "toc-hr-collapsed": true
    },
@@ -1278,7 +1362,52 @@
    "outputs": [],
    "source": [
     "dataloader = tr.unet.UNet_Training_DataLoader(\n",
-    "    nndatapath=\"/n/scratch2/de64/nntest5\",\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest7\",\n",
+    "    experimentname=\"First NN\",\n",
+    "    trainpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    "    testpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    "    valpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = tr.unet.UNet_Training_DataLoader(\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest8\",\n",
+    "    experimentname=\"First NN\",\n",
+    "    trainpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    "    testpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    "    valpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = tr.unet.UNet_Training_DataLoader(\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest9\",\n",
+    "    experimentname=\"First NN\",\n",
+    "    trainpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    "    testpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    "    valpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = tr.unet.UNet_Training_DataLoader(\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest10\",\n",
     "    experimentname=\"First NN\",\n",
     "    trainpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
     "    testpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
@@ -1378,7 +1507,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "### Hyperparameter (Grid) Search"
@@ -1397,7 +1526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = tr.unet.GridSearch(\"/n/scratch2/de64/nntest4\", numepochs=50)"
+    "grid = tr.unet.GridSearch(\"/n/scratch2/de64/nntest10\", numepochs=15)"
    ]
   },
   {
@@ -1431,7 +1560,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid.run_grid_search()"
+    "grid.run_grid_search(gres=\"gpu:teslaK80:1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluate Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib ipympl\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = [12, 8]\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set()\n",
+    "sns.set(font_scale=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis = tr.unet.TrainingVisualizer(\n",
+    "    \"/n/scratch2/de64/nntest10\", \"/n/groups/paulsson/Daniel/NNModels\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.inter_plot_loss(\"Val Loss\")\n",
+    "vis.grid_widget.on(\"filter_changed\", vis.handle_filter_changed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.grid_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.inter_df_columns()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.model_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "plt.hist(vis.model_df[\"Val F1 Cell Scores\"][0], bins=50)\n",
+    "plt.xlabel(\"F-Score\")\n",
+    "plt.ylabel(\"Occurances\")\n",
+    "plt.xticks(np.arange(0, 1.01, step=0.5))\n",
+    "plt.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch2/de64/2019-07-08_bacillus_rodz_mut_expt_bmbm_ti4\"\n",
+    "unetseg = tr.unet.UNet_Segmenter(\n",
+    "    headpath, \"Phase\", \"/n/groups/paulsson/Daniel/NNModels\", min_obj_size=20\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choose_channel = interactive(\n",
+    "    unetseg.choose_seg_channel,\n",
+    "    {\"manual\": True},\n",
+    "    seg_channel=Dropdown(options=unetseg.all_channels, value=unetseg.all_channels[0]),\n",
+    ")\n",
+    "display(choose_channel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unetseg.inter_df_columns()"
    ]
   },
   {
@@ -1446,28 +1698,136 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import h5py\n",
+    "import trenchripper as tr\n",
+    "from matplotlib import pyplot as plt"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with h5py.File(\"/n/scratch2/de64/nntest7/test.hdf5\", \"r\") as infile:\n",
+    "    img_arr = torch.Tensor(infile[\"img\"][535:550])\n",
+    "    seg_arr = torch.Tensor(infile[\"seg\"][100:200:10])\n",
+    "    weight_arr = infile[\"weight_(10.0, 4.0)\"][0:300:10]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "testunet = tr.unet.UNet(1, 2, layers=3, hidden_size=32, dropout=0.0, withsoftmax=True)\n",
+    "device = torch.device(\"cpu\")\n",
+    "testunet.load_state_dict(\n",
+    "    torch.load(\"/n/scratch2/de64/nntest7/models/0.pt\", map_location=device)\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = testunet.forward(img_arr).detach().numpy()[:, 1]\n",
+    "x = img_arr.detach().numpy().squeeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(x[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(y[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_kymo = tr.utils.kymo_handle()\n",
+    "img_kymo.import_wrap(x)\n",
+    "img = img_kymo.return_unwrap(padding=0)\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg_kymo = tr.utils.kymo_handle()\n",
+    "seg_kymo.import_wrap(y)\n",
+    "seg = seg_kymo.return_unwrap(padding=0)\n",
+    "plt.imshow(seg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = seg > 0.6\n",
+    "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skimage as sk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_mask = sk.morphology.remove_small_objects(mask, min_size=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(filtered_mask)"
+   ]
   },
   {
    "cell_type": "markdown",
