--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
@@ -1334,7 +1334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kyview.inspect_trench(21, 30)"
+    "kyview.inspect_trench(22, 30, x_size=24, y_size=6)"
    ]
   },
   {
