--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
@@ -1334,8 +1334,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kyview.inspect_trench(22, 30, x_size=24, y_size=6)"
+    "kyviewer = interactive(\n",
+    "    kyview.inspect_trench,\n",
+    "    {\"manual\": True},\n",
+    "    file_idx=IntText(value=0, description=\"File Index:\", disabled=False),\n",
+    "    trench_idx=IntText(value=0, description=\"Trench Index:\", disabled=False),\n",
+    "    x_size=IntSlider(\n",
+    "        value=20, description=\"X Size:\", min=0, max=50, step=1, disabled=False\n",
+    "    ),\n",
+    "    y_size=IntSlider(\n",
+    "        value=6, description=\"Y Size:\", min=0, max=30, step=1, disabled=False\n",
+    "    ),\n",
+    ")\n",
+    "display(kyviewer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(\n",
+    "    interactive_kymograph.view_image,\n",
+    "    fov_idx=IntText(value=0, description=\"FOV number:\", disabled=False),\n",
+    "    t=IntSlider(\n",
+    "        value=0, min=0, max=timepoints_len - 1, step=1, continuous_update=False\n",
+    "    ),\n",
+    "    channel=Dropdown(\n",
+    "        options=channels, value=channels[0], description=\"Channel:\", disabled=False\n",
+    "    ),\n",
+    "    invert=Dropdown(options=[True, False], value=False),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
