Make division detection more robust to drift, trench loading, and oversegmentation

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\""
+    "headpath = \"/n/scratch2/bj66/vibrio_30_balanced2\""
    ]
   },
   {
@@ -44,13 +44,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmenter = phase_segmentation_cluster(headpath,\n",
-    "            seg_channel=\"Phase\",init_niblack_k=-0.45,\n",
-    "            maxima_niblack_k=-0.8, init_smooth_sigma=4,\n",
-    "            maxima_smooth_sigma=3, init_niblack_window_size=13,\n",
-    "            maxima_niblack_window_size=13, min_cell_size=100,\n",
-    "            deviation_from_median=0.3, max_perc_contrast=97,\n",
-    "            wrap_pad=0"
+    "segmenter = phase_segmentation_cluster(\n",
+    "    headpath,\n",
+    "    seg_channel=\"Phase\",\n",
+    "    init_niblack_k=-0.45,\n",
+    "    maxima_niblack_k=-0.8,\n",
+    "    init_smooth_sigma=4,\n",
+    "    maxima_smooth_sigma=3,\n",
+    "    init_niblack_window_size=13,\n",
+    "    maxima_niblack_window_size=13,\n",
+    "    min_cell_size=100,\n",
+    "    deviation_from_median=0.3,\n",
+    "    max_perc_contrast=97,\n",
+    "    wrap_pad=0,\n",
+    ")"
    ]
   },
   {
@@ -197,15 +204,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc.futures[\"Segmentation: 0\"].result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dc.shutdown()"
    ]
   },
@@ -307,15 +305,6 @@
     "trench_loadings = np.concatenate(\n",
     "    dc.daskclient.gather(dc.futures[\"Trench Loading\"]), axis=0\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(trench_loadings)"
    ]
   },
   {
@@ -464,29 +453,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_30_MUX\"\n",
-    "segmenter = phase_segmentation_cluster(\n",
-    "    headpath,\n",
-    "    seg_channel=\"Phase\",\n",
-    "    init_niblack_k=-0.45,\n",
-    "    maxima_niblack_k=-0.8,\n",
-    "    init_smooth_sigma=4,\n",
-    "    maxima_smooth_sigma=3,\n",
-    "    init_niblack_window_size=13,\n",
-    "    maxima_niblack_window_size=13,\n",
-    "    min_cell_size=100,\n",
-    "    deviation_from_median=0.3,\n",
-    "    max_perc_contrast=97,\n",
-    "    wrap_pad=0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dc = dask_controller(\n",
     "    walltime=\"4:00:00\",\n",
     "    local=False,\n",
@@ -552,21 +518,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\"\n",
-    "segmenter = phase_segmentation_cluster(\n",
-    "    headpath,\n",
-    "    seg_channel=\"Phase\",\n",
-    "    init_niblack_k=-0.45,\n",
-    "    maxima_niblack_k=-0.8,\n",
-    "    init_smooth_sigma=4,\n",
-    "    maxima_smooth_sigma=3,\n",
-    "    init_niblack_window_size=13,\n",
-    "    maxima_niblack_window_size=13,\n",
-    "    min_cell_size=100,\n",
-    "    deviation_from_median=0.3,\n",
-    "    max_perc_contrast=97,\n",
-    "    wrap_pad=0,\n",
-    ")"
+    "from pandas import HDFStore\n",
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
@@ -575,24 +529,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas import HDFStore\n",
-    "import pandas as pd\n",
-    "import random\n",
-    "\n",
     "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
     "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
     "random.shuffle(file_indices)\n",
     "file_idx = file_indices[0]\n",
     "p = os.path.join(segmenter.phasedatapath, \"data_%d.h5\" % file_idx)\n",
-    "test_df = pd.read_hdf(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_df = pd.read_hdf(p)\n",
     "len(test_df.index.unique(\"time_s\"))"
    ]
   },
@@ -688,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_30_MUX\""
+    "headpath = \"/n/scratch2/bj66/vibrio_30_balanced2\""
    ]
   },
   {
@@ -715,18 +657,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "growth_rates = pd.read_hdf(\n",
-    "    os.path.join(tracker.phasesegmentationpath, \"growth_properties.h5\"), \"growth_rates\"\n",
+    "dts = pd.read_hdf(\n",
+    "    os.path.join(tracker.phasesegmentationpath, \"growth_properties.h5\"),\n",
+    "    \"doubling_times\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "growth_rates.head()"
    ]
   },
   {
@@ -751,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_37_balanced\"\n",
+    "headpath = \"/n/scratch2/bj66/vibrio_30_balanced2\"\n",
     "segmenter = phase_segmentation_cluster(\n",
     "    headpath,\n",
     "    seg_channel=\"Phase\",\n",
@@ -777,6 +711,8 @@
     "from pandas import HDFStore\n",
     "import pandas as pd\n",
     "import random\n",
+    "import scipy.signal as signal\n",
+    "from trenchripper.DetectPeaks import detect_peaks\n",
     "\n",
     "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
     "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
@@ -789,11 +725,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_idx = 229\n",
-    "trenchid = 1148\n",
+    "trenchid = 1428\n",
+    "file_idx = kymodf.loc[trenchid][\"File Index\"].unique()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "p = os.path.join(segmenter.phasedatapath, \"data_%d.h5\" % file_idx)\n",
     "test_df = pd.read_hdf(p)\n",
     "test_df = test_df[test_df[\"trenchid\"] == trenchid]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loadings = np.array(kymodf.loc[trenchid][\"Trench Loading\"])\n",
+    "outside = ~(loadings > 0.35) * (loadings < 0.75)"
    ]
   },
   {
@@ -825,11 +779,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_idx = 1050\n",
+    "trench_df = test_df.loc[trench_idx]\n",
+    "xs = []\n",
+    "ys = []\n",
+    "for time_s in trench_df.index.unique(\"time_s\"):\n",
+    "    xs.append(time_s / 60)\n",
+    "    ys.append(trench_df.loc[time_s].iloc[0][\"major_axis_length\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpolated_ys = tracker.repair_trench_loadings(np.array(ys)[:, None], outside)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ys[429]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpolated_ys.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind = detect_peaks(signal.wiener(interpolated_ys.ravel()), relative_threshold=1.5)\n",
+    "print(ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig1, ax1 = plt.subplots(figsize=(10, 10))\n",
+    "ax1.plot(xs[:500], ys[:500])\n",
+    "ax1.plot(xs[:500], interpolated_ys[:500])\n",
+    "plt.xlim(0, 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_idx = 900\n",
     "n_rows = 8\n",
     "fig1, axes = plt.subplots(1 * n_rows, 15, figsize=(20, 10 * n_rows))\n",
     "for i, ax in enumerate(axes.ravel()):\n",
     "    ax.imshow(data[time_idx + i, :, :], cmap=\"inferno_r\")\n",
+    "    ax.set_title(\"%.1f\" % (times[time_idx + i] / 60))\n",
     "    ax.scatter(\n",
     "        test_df.loc[trench_idx, times[time_idx + i]][\"centx\"],\n",
     "        test_df.loc[trench_idx, times[time_idx + i]][\"centy\"],\n",
