How are there still more bugs

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/bj66/vibrio_30_balanced2\""
+    "headpath = \"/n/scratch2/bj66/vibrio_37_mux\""
    ]
   },
   {
@@ -65,38 +65,8 @@
    "outputs": [],
    "source": [
     "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
-    "metadata = kymodf.metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "        kymodf = kymodf.reset_index()\n",
-    "        kymodf = kymodf.set_index([\"File Index\", \"File Trench Index\", \"timepoints\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymodf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
     "file_indices = kymodf[\"File Index\"].unique().tolist()\n",
-    "random.shuffle(file_indices)\n",
-    "file_idx = 0"
+    "random.shuffle(file_indices)"
    ]
   },
   {
@@ -105,6 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file_idx = 51\n",
     "data = segmenter.load_trench_array_list(\n",
     "    segmenter.kymographpath + \"/kymograph_\", file_idx, segmenter.seg_channel, True\n",
     ")"
@@ -116,18 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# trench = data[0,:]\n",
-    "trench = data[np.random.randint(data.shape[0]), :]\n",
-    "timepoint = np.random.randint(trench.shape[0])\n",
+    "trench_idx = 0\n",
+    "trench = data[trench_idx, :]\n",
+    "timepoint = 646\n",
     "img = trench[timepoint, :, :]\n",
     "fig1, ax1 = plt.subplots(figsize=(10, 10))\n",
     "ax1.imshow(img)"
@@ -169,7 +132,7 @@
     "dc = dask_controller(\n",
     "    walltime=\"6:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
+    "    n_workers=25,\n",
     "    memory=\"7.5GB\",\n",
     "    death_timeout=120.0,\n",
     "    working_directory=headpath + \"/dask\",\n",
@@ -202,6 +165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dc.futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dc.shutdown()"
    ]
   },
@@ -225,7 +197,10 @@
     "with h5py.File(\n",
     "    segmenter.phasesegmentationpath + \"/segmentation_\" + str(file_idx) + \".hdf5\", \"r\"\n",
     ") as input_file:\n",
-    "    data = input_file[\"data\"][:]"
+    "    segmented_data = input_file[\"data\"][:]\n",
+    "data = segmenter.load_trench_array_list(\n",
+    "    segmenter.kymographpath + \"/kymograph_\", file_idx, segmenter.seg_channel, True\n",
+    ")"
    ]
   },
   {
@@ -237,8 +212,10 @@
     "trench_idx = np.random.randint(data.shape[0])\n",
     "time_idx = np.random.randint(data.shape[1])\n",
     "img = data[trench_idx, time_idx, :, :]\n",
-    "fig1, ax1 = plt.subplots(figsize=(10, 10))\n",
+    "seg = segmented_data[trench_idx, time_idx, :, :]\n",
+    "fig1, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 10))\n",
     "ax1.imshow(img)\n",
+    "ax2.imshow(seg)\n",
     "print(\"File %d, Trench %d, Time %d\" % (file_idx, trench_idx, time_idx))"
    ]
   },
@@ -283,6 +260,15 @@
    "outputs": [],
    "source": [
     "segmenter.dask_characterize_trench_loading(dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc.futures[\"Trench Loading\"][0].result()"
    ]
   },
   {
@@ -406,7 +392,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%lprun -f segmenter.extract_cell_data segmenter.extract_cell_data(file_idx, times, global_trench_indices, trench_loadings, columns, metadata)"
+    "segmenter.extract_cell_data(\n",
+    "    file_idx, times, global_trench_indices, trench_loadings, columns, metadata\n",
+    ")"
    ]
   },
   {
