--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190521 JQS Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190521 JQS Segmentation.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(100)"
+    "cluster.scale(30)"
    ]
   },
   {
@@ -154,15 +154,13 @@
    "outputs": [],
    "source": [
     "base_filename = \"/n/scratch2/jqs1\"\n",
-    "fluorescence_filenames = (\n",
-    "    glob(os.path.join(base_filename, \"190411/Noah_Runs/*.nd2\"))\n",
-    "    + glob(os.path.join(base_filename, \"190507/*.nd2\"))\n",
-    "    + glob(os.path.join(base_filename, \"190508/*.nd2\"))\n",
-    "    + glob(os.path.join(base_filename, \"190514/*.nd2\"))\n",
-    "    + glob(os.path.join(base_filename, \"190515/*.nd2\"))\n",
-    "    + glob(os.path.join(base_filename, \"190516/*.nd2\"))\n",
-    ")\n",
-    "fluorescence_filenames = [\"/n/scratch2/jqs1/190507/mkate_100ms_50pct.nd2\"]\n",
+    "# fluorescence_filenames = (glob(os.path.join(base_filename, '190411/Noah_Runs/*.nd2')) +\n",
+    "#                           glob(os.path.join(base_filename, '190507/*.nd2')) +\n",
+    "#                           glob(os.path.join(base_filename, '190508/*.nd2')) +\n",
+    "#                           glob(os.path.join(base_filename, '190514/*.nd2')) +\n",
+    "#                           glob(os.path.join(base_filename, '190515/*.nd2')) +\n",
+    "#                           glob(os.path.join(base_filename, '190516/*.nd2')))\n",
+    "fluorescence_filenames = glob(os.path.join(base_filename, \"190523/*ti5*.nd2\"))\n",
     "# fluorescence_filenames = glob(os.path.join(base_filename, '190401/*.nd2')) + glob(os.path.join(base_filename, '190411/Noah_Runs/*.nd2'))\n",
     "phase_filenames = (\n",
     "    []\n",
@@ -222,13 +220,7 @@
     "data_graph = {}\n",
     "for photobleaching_filename in fluorescence_filenames[:]:\n",
     "    data_graph[photobleaching_filename] = segmentation.process_file(\n",
-    "        funcs,\n",
-    "        photobleaching_filename,\n",
-    "        dark_frame=dark_frame,\n",
-    "        flat_fields=flat_fields,\n",
-    "        delayed=False,\n",
-    "        position_slice=slice(1),\n",
-    "        time_slice=slice(None),\n",
+    "        funcs, photobleaching_filename, dark_frame=dark_frame, flat_fields=flat_fields\n",
     "    )\n",
     "\n",
     "for photobleaching_filename in phase_filenames[:]:\n",
@@ -274,44 +266,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fluorescence_filenames[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = segmentation.get_nd2_reader(\n",
-    "    \"/n/scratch2/jqs1/190326/190326_GFP_chlor_wateragarpad_100ms_100pct_laser.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.sizes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.metadata"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -333,25 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = (\n",
-    "    \"/n/groups/paulsson/jqs1/molecule-counting/190521photobleaching_noflatcorr.pickle\"\n",
-    ")\n",
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/190523photobleaching_noflatcorr_flickerdebug_ti5.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pickle.load(\n",
-    "    open(\n",
-    "        \"/n/groups/paulsson/jqs1/molecule-counting/190521photobleaching_noflatcorr.pickle\",\n",
-    "        \"rb\",\n",
-    "    )\n",
-    ")"
    ]
   },
   {
@@ -365,70 +303,6 @@
     "    for k, v in data.items()\n",
     "    if k[0] != \"_\"\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%output size=200\n",
-    "hv.Image(\n",
-    "    np.asarray(\n",
-    "        data[\"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"][0][\n",
-    "            \"segmentation_frame\"\n",
-    "        ]\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = segmentation.get_nd2_reader(\n",
-    "    \"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%output size=200\n",
-    "hv.HoloMap({t: hv.Image(nd2.get_frame_2D(v=0, t=t)) for t in range(5)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_graph[\"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.plot(\n",
-    "    np.asarray(\n",
-    "        np.log(\n",
-    "            data_graph[\"/n/scratch2/jqs1/190507/mkate_100ms_50pct.nd2\"][0][\"traces\"][\n",
-    "                \"mean\"\n",
-    "            ]\n",
-    "        )\n",
-    "    ).T\n",
-    ")"
    ]
   },
   {
